# textAdventure

./: .gitignore  CMakeLists.txt  README.md  copyright  main.c  makefile  substitue.sh  substitute.sh  textAdventure.c  unitTest.c  utils.c  utils.h
data/: kitchen.tas.txt  pitch.md  spaceship.tas.txt  test.tas.txt  verbs
lib/albob/: CMakeLists.txt  array.c  array.h  debug.c  debug.h  string.c  string.h
specs/: README.md  ui.ebnf  ui.xhtml
src/: CMakeLists.txt  textAdventure.c  unitTest.c
src/browser/: README.md  index.html  ta.js  taParser.js  tasTest.txt
src/ios/: README.md
src/linux/: README.md
src/osx/: README.md
src/windows/: README.md
